--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,48 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.navbar {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 1px solid rgb(221, 221, 221);
+  display: flex;
+  height: 60px;
+  justify-content: space-between;
+  width: 100%;
+  padding-left: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.dark-mode__toggle {
+  background: papayawhip;
+  border-radius: 50px;
+  border: 1px solid black;
+  height: 20px;
+  position: relative;
+  width: 40px;
+  margin-right: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toggle {
+  background: #f68819;
+  border-radius: 50px;
+  height: 18px;
+  left: 0;
+  position: absolute;
+  width: 20px;
+}
+
+.toggled {
+  left: 18px;
+}
+
+.dark-mode {
+  color: #fff;
+  background-color: rgb(61, 61, 61); 
+}
+
+.dark-mode .navbar {
+  background-color: #1F2022;
+  border: none;
 }
